--- a/app/scss/components/card2.scss
+++ b/app/scss/components/card2.scss
@@ -11,7 +11,7 @@
   align-items: start;
 
   &__description {
-    color: var(--dark-text1);
+    color: var(--text-color2);
     font-weight: 700;
     font-size: rem(15);
     
