--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -21,14 +21,14 @@
   &__subtitle {
     font-size: rem(14);
     font-weight: 700;
-    color: var(--dark-text1);
+    color: var(--text-color2);
   }
 
   &__divider {
     height: 1px;
     width: 100%;
     margin: rem(20) 0;
-    background: var(--dark-text1);
+    background: var(--text-color2);
     opacity: 0.3;
 
     @include breakpoint(medium) {
