--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -3,7 +3,7 @@
 .toggle {
   border: none;
   font-size: rem(14);
-  color: var(--dark-text1);
+  color: var(--text-color2);
   font-weight: 700;
   margin: 0;
   padding: 0;
