--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -11,6 +11,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-inter);
-  color: white;
-  background: var(--dark-bg);
+  color: var(--text-color);
+  background: var(--background);
 }
